[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/weapons/weapon_projectile_sand.png" type="Texture" id=1]
[ext_resource path="res://src/SandBall.gd" type="Script" id=2]
[ext_resource path="res://assets/art/weapons/weapon_projectile_sand_particle.png" type="Texture" id=3]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.826087, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
gravity = Vector3( 0, 25, 0 )
angular_velocity = 35.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -11.77
scale = 2.0
color_ramp = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
angular_velocity = 150.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -50.0
scale = 2.0
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="SandBall" type="RigidBody2D" groups=["sandballs"]]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="DeathParticles" type="Particles2D" parent="Sprite"]
emitting = false
amount = 16
lifetime = 1.2
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="MasterTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
[connection signal="timeout" from="MasterTimer" to="." method="_on_MasterTimer_timeout"]
